--- a/testHTML/landing.html
+++ b/testHTML/landing.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="row" id="landingRow">
-                <div class="col-lg-7">
+                <div class="col-lg-12">
                     <div class="card">
                         <h5 class="card-header">Cataloged Items</h5>
                         <div class="card-body">
@@ -59,10 +59,65 @@
                                 </tbody>
                             </table>
                             <button type="button" class="btn btn-outline-danger" id="delete">Delete Selected Item(s)</button>
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                                Update Entries
+                            </button>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-1"></div>
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Add Item</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlInput1">Name of Item</label>
+                                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Office Desk">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlSelect1">Item Category</label>
+                                        <select class="form-control" id="exampleFormControlSelect1">
+                                        <option>Please Select One</option>
+                                        <option>Furniture</option>
+                                        <option>Electronics</option>
+                                        <option>Home Appliances</option>
+                                        <option>Small Motor</option>
+                                        <option>Cosmetics</option>
+                                        <option>Clothing</option>
+                                        <option>Personal Fitness Device</option>
+                                        <option>Toys</option>
+                                        <option>Rugs/Tapestry</option>
+                                        <option>Art/Memorabilia (Available with Pro)</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlInput1">Price of item</label>
+                                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="$3,500">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlFile1">Upload attachment(s)</label>
+                                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">Description of item (optional)</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    </div>
+                                </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-warning" id="update">Update</button>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-1"></div>
                 <div class="col-lg-4">
                     <div class="card">
                         <div class="card-header">
@@ -105,9 +160,8 @@
                             </form>
                             <button type="button" class="btn btn-warning" id="update">Update</button>
                         </div>
-                        
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-lg-8"></div>
