deleted hard coding of API routes on client side

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,6 +46,6 @@
     <!-- <script>
       cloudinary.setCloudName("db6mxqach");
     </script> -->
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
